--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -206,6 +206,16 @@ img {
 }
 
 
+.comment {
+    margin-bottom: 15px;
+}
+
+.pagination {
+    margin: 20px;
+    font-weight: bold;
+    font-size: 1.5em;
+}
+
 /* MAIN PAGE -DEV LIFE */
 
 .btnSlide {
@@ -253,6 +263,7 @@ img {
     overflow: hidden;
     border-radius: 2%;
     max-height: 290px;
+    max-width: fit-content;
     z-index: 1;
 }
 
