--- a/views/dev/showPost.ejs
+++ b/views/dev/showPost.ejs
@@ -41,7 +41,7 @@
                     <hr>
                     <% devPost.comments.forEach(function(comment){ %>
                         <div class="row">
-                            <div class="col-md-12">
+                            <div class="col-md-12 comment">
                                 <strong><%= comment.author.username %></strong> on
                                 <strong><%= moment(comment.createdOn).format('dddd DD/MM/YYYY');  %></strong>
                                 <br><br>
